--- a/msc-service-consumer/src/main/resources/bootstrap.yml
+++ b/msc-service-consumer/src/main/resources/bootstrap.yml
@@ -1,25 +1,17 @@
 server:
-  port: 9001
-
+  servlet:
+    context-path: /sc
 spring:
   application:
     name: msc-service-consumer
   cloud:
     nacos:
       config:
-        server-addr: 192.168.136.10:8848
+        server-addr:  ${NACOS_SERVER_HOST}:${NACOS_SERVER_PORT}
         file-extension: yaml
-        group: DEFAULT_GROUP
+        shared-dataids: common.yaml
+        refreshable-dataids: common.yaml
       discovery:
-        server-addr: 192.168.136.10:8848
-  #  profiles:
-#    active: dev
+        server-addr:  ${NACOS_SERVER_HOST}:${NACOS_SERVER_PORT}
 
 
-logging:
-  level:
-    org.springframework.cloud.gateway: TRACE
-    org.springframework.http.server.reactive: DEBUG
-    org.springframework.web.reactive: DEBUG
-    reactor.ipc.netty: DEBUG
-    reactor.netty: DEBUG
