--- a/msc-gateway/pom.xml
+++ b/msc-gateway/pom.xml
@@ -37,5 +37,22 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-redis-reactive</artifactId>
         </dependency>
+        <!--alibaba sentinel-->
+        <dependency>
+            <groupId>com.alibaba.csp</groupId>
+            <artifactId>sentinel-spring-cloud-gateway-adapter</artifactId>
+            <version>1.6.3</version>
+        </dependency>
+        <!--swagger ui-->
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger-ui</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.sandra</groupId>
+            <artifactId>msc-framework-swagger</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+
     </dependencies>
 </project>
