--- a/msc-gateway/src/main/resources/application.yml
+++ b/msc-gateway/src/main/resources/application.yml
@@ -15,8 +15,14 @@ spring:
           #          uri: http://localhost:9000/
           predicates:
             - Path=/sp/**
-        #          filters:
-        #            - StripPrefix=1 #将/sp前缀去掉
+          #          filters:
+          #            - StripPrefix=1 #将/sp前缀去掉
+          filters:
+            - name: RequestRateLimiter
+              args:
+                key-resolver: '#{@hostAddrKeyResolver}' #用于限流的键的解析器的 Bean 对象的名字。它使用 SpEL 表达式根据#{@beanName}从 Spring 容器中获取 Bean 对象。
+                redis-rate-limiter.replenishRate: 1 #令牌桶每秒填充平均速率。
+                redis-rate-limiter.burstCapacity: 3  #令牌桶总容量。
         - id: msc-service-consumer
           uri: lb://msc-service-consumer
           predicates:
@@ -29,6 +35,7 @@ spring:
     host: 192.168.136.10
     port: 6379
     database: 0
+    password: 123456
 
 # 自定义服务列表
 itsa:
