--- a/msc-framework/msc-framework-base/pom.xml
+++ b/msc-framework/msc-framework-base/pom.xml
@@ -13,10 +13,16 @@
 
     <dependencies>
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+        <dependency>
             <groupId>com.sandra</groupId>
             <artifactId>msc-framework-swagger</artifactId>
             <version>${project.version}</version>
         </dependency>
+
+
     </dependencies>
 
 </project>
