--- a/msc-common/msc-common-utils/pom.xml
+++ b/msc-common/msc-common-utils/pom.xml
@@ -3,17 +3,13 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>msc-skeleton</artifactId>
+        <artifactId>msc-common</artifactId>
         <groupId>com.sandra</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>msc-common</artifactId>
-    <packaging>pom</packaging>
-    <modules>
-        <module>msc-common-utils</module>
-    </modules>
+    <artifactId>msc-common-utils</artifactId>
 
 
 </project>
