--- a/msc-gateway/pom.xml
+++ b/msc-gateway/pom.xml
@@ -33,16 +33,22 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-gateway</artifactId>
         </dependency>
+        <!--hystrix-->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-hystrix</artifactId>
+        </dependency>
+        <!--限流依赖-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-redis-reactive</artifactId>
         </dependency>
         <!--alibaba sentinel-->
-        <dependency>
-            <groupId>com.alibaba.csp</groupId>
-            <artifactId>sentinel-spring-cloud-gateway-adapter</artifactId>
-            <version>1.6.3</version>
-        </dependency>
+        <!--        <dependency>-->
+        <!--            <groupId>com.alibaba.csp</groupId>-->
+        <!--            <artifactId>sentinel-spring-cloud-gateway-adapter</artifactId>-->
+        <!--            <version>1.6.3</version>-->
+        <!--        </dependency>-->
         <!--swagger ui-->
         <dependency>
             <groupId>io.springfox</groupId>
@@ -53,6 +59,7 @@
             <artifactId>msc-framework-swagger</artifactId>
             <version>${project.version}</version>
         </dependency>
+
 
     </dependencies>
 </project>
