--- a/msc-common/msc-common-base/pom.xml
+++ b/msc-common/msc-common-base/pom.xml
@@ -9,14 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>msc-common-utils</artifactId>
+    <artifactId>msc-common-base</artifactId>
 
-    <dependencies>
-        <!-- redis -->
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-data-redis</artifactId>
-        </dependency>
 
-    </dependencies>
 </project>
