--- a/msc-services/msc-service-provider/src/main/resources/application.yml
+++ b/msc-services/msc-service-provider/src/main/resources/application.yml
@@ -17,3 +17,37 @@ swagger2:
   version: 1.0
   apiName: Authorization
   apiKeyName: Authorization
+  
+#公共配置 
+spring:
+  datasource:
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://192.168.136.10:3306/auth?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true&useSSL=false&zeroDateTimeBehavior=convertToNull
+    username: root
+    password: 123456
+    type: com.zaxxer.hikari.HikariDataSource
+    hikari:
+      minimum-idle: 1
+      maximum-pool-size: 5
+      pool-name: hikari-cp
+      auto-commit: true
+      max-lifetime: 30000
+      connection-timeout: 180000
+      connection-test-query: SELECT 1
+  redis:
+    database: 0
+    host: 192.168.136.10
+    port: 6379
+    password: 123456
+  jackson:
+    time-zone: Asia/Shanghai
+    serialization:
+      write-dates-as-timestamps: true
+      
+mybatis-plus:
+  mapper-locations: classpath:mapper/*.xml #多个目录用逗号或者分号分隔
+  configuration:
+    map-underscore-to-camel-case: true  # 是否开启自动驼峰命名规则映射:从数据库列名到Java属性驼峰命名的类似映射
+    call-setters-on-nulls: true # 如果查询结果中包含空值的列，则 MyBatis 在映射的时候，不会映射这个字段
+    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl  # 这个配置会将执行的sql打印出来，在开发或测试的时候可以用
+ 
